--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vipnunes</title>
-    <link rel="icon" href="favicon.ico" type="image/png">
+    <link rel="icon" href="11zon_cropped(1).png" type="image/png">
 
     <style>
         body {
@@ -50,7 +50,7 @@
 <body>
 
 <div class="container">
-    <img src="caminho/para/sua/imagem.jpg" alt="Vipnunes" class="profile-image">
+    <img src=11zon_cropped(1).png" alt="Vipnunes" class="profile-image">
     <h1>Vipnunes</h1>
     <p>Hello, I'm Vipnunes! I am an ordinary person on the internet.</p>
     
