--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 <body>
 
 <div class="container">
-    <img src="11zon_cropped(1).jpg" alt="Vipnunes" class="profile-image">
+    <img src="/11zon_cropped(1).jpg" alt="Vipnunes" class="profile-image">
     <h1>Vipnunes</h1>
     <p>Hello, I'm Vipnunes! I am an ordinary person on the internet.</p>
     
