--- a/index.html
+++ b/index.html
@@ -52,6 +52,19 @@
 </head>
 <body>
 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5951847339464924"
+     crossorigin="anonymous"></script>
+<!-- Ads -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-5951847339464924"
+     data-ad-slot="3072980739"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+
 <div class="container">
     <img src="11zon_cropped(1).png" alt="Vipnunes" class="profile-image">
     <h1>Vipnunes</h1>
