--- a/index.html
+++ b/index.html
@@ -65,6 +65,18 @@
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
 
+<script src="https://www.drcode.com.br/nofollow/aviso-cookies/drcode.cookies.js"></script>
+<script>
+  avisoCookiesDrcode({
+    message:'We use cookies to give you the best experience on our website.',
+    backgroundColor:'rgba(255,255,255,0.95)',
+    textColor:'#666666',
+    buttonBackgoundColor:'#0e9a20',
+    buttonHoverBackgoundColor:'#0a6b16',
+    buttonTextColor:'#ffffff'
+})
+</script>
+
 <div class="container">
     <img src="11zon_cropped(1).png" alt="Vipnunes" class="profile-image">
     <h1>Vipnunes</h1>
