--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@ window.cookieconsent.initialise({
     <h1>Vipnunes</h1>
     <p>Hello, I'm Vipnunes! I am an ordinary person on the internet.</p>
     
-    <a href="contato@vipnunes.com" class="link">E-mail</a>
-    <a href="search.vipnunes.com" class="link">Vipnunes Search</a>
+    <a href="mailto:contato@vipnunes.com" class="link">E-mail</a>
+    <a href="https://search.vipnunes.com" class="link">Vipnunes Search</a>
     <a href="https://discord.com/invite/JC3xbdzarY" class="link">Discord</a>
     <a href="https://www.youtube.com/vipnunes" class="link">Youtube</a>
     <a href="https://github.com/vipnunes" class="link">Git Hub</a>
