--- a/index.html
+++ b/index.html
@@ -98,8 +98,12 @@ window.cookieconsent.initialise({
     <a href="https://search.vipnunes.com" class="link">Vipnunes Search</a>
     <a href="https://discord.com/invite/JC3xbdzarY" class="link">Discord</a>
     <a href="https://www.youtube.com/vipnunes" class="link">Youtube</a>
-    <a href="https://github.com/vipnunes" class="link">Git Hub</a>
-    <!-- Adicione mais links conforme necessário -->
+    <a href="https://www.roblox.com/users/1601069127/profile" class="link">Roblox</a>
+    <a href="https://github.com/vipnunes" class="link">GitHub</a>
+    <a href="https://twitter.com/vipnunes1" class="link">Twitter / X</a>
+    <a href="https://www.reddit.com/user/vipnunes" class="link">Reddit</a>
+
+    <p class="since-text">Since July 23, of 2023.</p>
 </div>
 
 </body>
