--- a/index.html
+++ b/index.html
@@ -95,15 +95,18 @@ window.cookieconsent.initialise({
     <p>Hello, I'm Vipnunes! I am an ordinary person on the internet.</p>
     
     <a href="mailto:contato@vipnunes.com" class="link">E-mail</a>
-    <a href="https://search.vipnunes.com" class="link">Vipnunes Search</a>
+    <p>Social Media</p>
     <a href="https://discord.com/invite/JC3xbdzarY" class="link">Discord</a>
     <a href="https://www.youtube.com/vipnunes" class="link">Youtube</a>
-    <a href="https://www.roblox.com/users/1601069127/profile" class="link">Roblox</a>
-    <a href="https://github.com/vipnunes" class="link">GitHub</a>
     <a href="https://twitter.com/vipnunes1" class="link">Twitter / X</a>
     <a href="https://www.reddit.com/user/vipnunes" class="link">Reddit</a>
+    <p>Games</p>
+    <a href="https://www.roblox.com/users/1601069127/profile" class="link">Roblox</a>
+    <p>My Github and My Projects</p>
+    <a href="https://github.com/vipnunes" class="link">GitHub</a>
+    <a href="https://search.vipnunes.com" class="link">Vipnunes Search</a>
 
-    <p class="since-text">Since July 23, of 2023.</p>
+    <p><b>Since July 23, of 2023.</b></p>
 </div>
 
 </body>
