--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5951847339464924"
      crossorigin="anonymous"></script>
 
-    <style>
+        <style>
         body {
             font-family: 'Arial', sans-serif;
             background-color: #1a1a1a; /* Fundo escuro */
             color: #ffffff; /* Texto branco */
-            margin: 0;
+            margin: 50px 0; /* Adiciona espaço de 50px acima e abaixo do conteúdo do site */
             padding: 0;
             display: flex;
             align-items: center;
@@ -26,6 +26,7 @@
         .container {
             max-width: 600px;
             text-align: center;
+            margin-top: 50px; /* Adiciona espaço de 50px acima do conteúdo dentro da container */
         }
 
         .profile-image {
