--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5951847339464924"
      crossorigin="anonymous"></script>
+    <script async src="https://fundingchoicesmessages.google.com/i/pub-5951847339464924?ers=1" nonce="16Kz1l-uop3MIYY3u8uGBA"></script><script nonce="16Kz1l-uop3MIYY3u8uGBA">(function() {function signalGooglefcPresent() {if (!window.frames['googlefcPresent']) {if (document.body) {const iframe = document.createElement('iframe'); iframe.style = 'width: 0; height: 0; border: none; z-index: -1000; left: -1000px; top: -1000px;'; iframe.style.display = 'none'; iframe.name = 'googlefcPresent'; document.body.appendChild(iframe);} else {setTimeout(signalGooglefcPresent, 0);}}}signalGooglefcPresent();})();</script>
 
         <style>
         body {
