--- a/index.html
+++ b/index.html
@@ -13,42 +13,42 @@
         <style>
         body {
             font-family: 'Arial', sans-serif;
-            background-color: #1a1a1a; /* Fundo escuro */
-            color: #ffffff; /* Texto branco */
-            margin: 50px 0; /* Adiciona espaço de 50px acima e abaixo do conteúdo do site */
+            background-color: #1a1a1a;
+            color: #ffffff;
+            
             padding: 0;
             display: flex;
             align-items: center;
             justify-content: center;
-            flex-direction: column; /* Adicionado para alinhar verticalmente */
+            flex-direction: column;
             height: 100vh;
         }
 
         .container {
             max-width: 600px;
             text-align: center;
-            margin-top: 50px; /* Adiciona espaço de 50px acima do conteúdo dentro da container */
+            margin-top: 50px;
         }
 
         .profile-image {
-            max-width: 100%; /* Ajusta a largura máxima da imagem */
-            border-radius: 50%; /* Torna a imagem circular */
-            margin-bottom: 20px; /* Adiciona um espaço entre a imagem e o texto */
+            max-width: 100%;
+            border-radius: 50%;
+            margin-bottom: 20px;
         }
 
         .link {
             display: block;
             padding: 15px;
             margin: 10px;
-            background-color: #333333; /* Cor de fundo dos links */
+            background-color: #333333;
             border-radius: 8px;
             text-decoration: none;
-            color: #ffffff; /* Cor do texto dos links */
+            color: #ffffff;
             font-weight: bold;
         }
 
         .link:hover {
-            background-color: #555555; /* Cor de destaque ao passar o mouse */
+            background-color: #555555;
         }
     </style>
 </head>
