--- a/404.html
+++ b/404.html
@@ -72,7 +72,7 @@
     <h1>404</h1>
     <p>The page you are looking for does not exist.</p>
     
-    <a href="https://vipnunes.com" class="link" target="_blank">Go Back</a>
+    <a href="https://vipnunes.com" class="link">Go to homepage</a>
     
 </div>
 
