--- a/index.html
+++ b/index.html
@@ -99,11 +99,10 @@ window.cookieconsent.initialise({
     <a href="mailto:contato@vipnunes.com" class="link" target="_blank">E-mail</a>
     <a href="https://discord.com/invite/JC3xbdzarY" class="link" target="_blank">Discord</a>
     <a href="https://www.youtube.com/vipnunes" class="link" target="_blank">Youtube</a>
-    <a href="https://twitter.com/vipnunes1" class="link" target="_blank">Twitter / X</a>
-    <a href="https://www.reddit.com/user/vipnunes" class="link" target="_blank">Reddit</a>
     <a href="https://www.roblox.com/users/1601069127/profile" class="link" target="_blank">Roblox</a>
     <a href="https://github.com/vipnunes" class="link" target="_blank">GitHub</a>
     <a href="https://search.vipnunes.com" class="link" target="_blank">Vipnunes Search</a>
+    <a href="https://.vipnunes.com" class="link" target="_blank">i.vipnunes.com (Link Shortener)</a>
     
 </div>
 
