--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ window.cookieconsent.initialise({
     <a href="https://www.roblox.com/users/1601069127/profile" class="link" target="_blank">Roblox</a>
     <a href="https://github.com/vipnunes" class="link" target="_blank">GitHub</a>
     <a href="https://search.vipnunes.com" class="link" target="_blank">Vipnunes Search</a>
-    <a href="https://.vipnunes.com" class="link" target="_blank">i.vipnunes.com (Link Shortener)</a>
+    <a href="https://i.vipnunes.com" class="link" target="_blank">i.vipnunes.com (Link Shortener)</a>
     
 </div>
 
