--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vipnunes</title>
     <link rel="icon" href="11zon_cropped(1).png" type="image/png">
+    <br rel="me" href="https://mastodon.social/@vipnunes">Mastodon</br>
     
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5951847339464924"
      crossorigin="anonymous"></script>
