--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         .container {
             max-width: 600px;
             text-align: center;
-            margin-top: 0px;
+            margin-top: 50px;
         }
 
         .profile-image {
@@ -49,6 +49,17 @@
 
         .link:hover {
             background-color: #555555;
+        }
+
+        .footer {
+            margin-top: 50px;
+            font-size: 14px;
+        }
+
+        .footer a {
+            color: #ffffff;
+            text-decoration: underline;
+            margin: 0 10px;
         }
     </style>
 </head>
@@ -97,14 +108,26 @@ window.cookieconsent.initialise({
     <p>Hello, I'm Vipnunes! I am an ordinary person on the internet.</p>
     
     <a href="mailto:contato@vipnunes.com" class="link" target="_blank">E-mail</a>
+    <p>Social Networks</p>
     <a href="https://discord.com/invite/JC3xbdzarY" class="link" target="_blank">Discord</a>
     <a href="https://www.youtube.com/vipnunes" class="link" target="_blank">Youtube</a>
+    <p>Games</p>
     <a href="https://www.roblox.com/users/1601069127/profile" class="link" target="_blank">Roblox</a>
+    <p>My Gihub and My Projects</p>
     <a href="https://github.com/vipnunes" class="link" target="_blank">GitHub</a>
     <a href="https://search.vipnunes.com" class="link" target="_blank">Vipnunes Search</a>
     <a href="https://i.vipnunes.com" class="link" target="_blank">i.vipnunes.com (Link Shortener)</a>
+    <p>Since 24 of July, of 2023</p>
     
 </div>
+
+<footer>
+<div class="footer">
+    <a href="https://vipnunes.com/privacy" target="_blank">Privacy Policy</a> ·
+    <a href="https://vipnunes.com/terms" target="_blank">Terms and Conditions</a> ·
+    <a href="https://vipnunes.con/about-us" target="_blank">About Us</a>
+</div>
+</footer>
 
 </body>
 </html>
