--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         .container {
             max-width: 600px;
             text-align: center;
-            margin-top: 50px;
+            margin-top: 25px;
         }
 
         .profile-image {
@@ -52,7 +52,7 @@
         }
 
         .footer {
-            margin-top: 50px;
+            margin-bottom: 25px;
             font-size: 14px;
         }
 
