--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
         }
 
         .footer {
+            margin-top: 50px;
             margin-bottom: 25px;
             font-size: 14px;
         }
