--- a/index.html
+++ b/index.html
@@ -109,16 +109,16 @@ window.cookieconsent.initialise({
     <p>Hello, I'm Vipnunes! I am an ordinary person on the internet.</p>
     
     <a href="mailto:contato@vipnunes.com" class="link" target="_blank">E-mail</a>
-    <p>Social Networks</p>
+    <p><b>Social Networks</b></p>
     <a href="https://discord.com/invite/JC3xbdzarY" class="link" target="_blank">Discord</a>
     <a href="https://www.youtube.com/vipnunes" class="link" target="_blank">Youtube</a>
-    <p>Games</p>
+    <p><b>Games</b></p>
     <a href="https://www.roblox.com/users/1601069127/profile" class="link" target="_blank">Roblox</a>
-    <p>My Gihub and My Projects</p>
+    <p><b>My Gihub and My Projects</b></p>
     <a href="https://github.com/vipnunes" class="link" target="_blank">GitHub</a>
     <a href="https://search.vipnunes.com" class="link" target="_blank">Vipnunes Search</a>
     <a href="https://i.vipnunes.com" class="link" target="_blank">i.vipnunes.com (Link Shortener)</a>
-    <p>Since 24 of July, of 2023</p>
+    <p><b>Since 24 of July, of 2023</b></p>
     
 </div>
 
