--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
             justify-content: center;
             flex-direction: column;
             height: 100vh;
+            background-image: url('earth.png');
+            background-size: cover;
+            background-position: center;
         }
 
         .container {
