--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             justify-content: center;
             flex-direction: column;
             height: 100vh;
-            background-image: url('earth.png');
+            background-image: url('https://vipnunes.com/earth.png');
             background-size: cover;
             background-position: center;
         }
