--- a/cec.html
+++ b/cec.html
@@ -72,7 +72,7 @@
     <h1>CEC</h1>
     <p>Arqivos.</p>
     
-    <a href="https://vipnunes.com/cec/revisão-de-historia.pdf" class="link">Revisão de História</a>
+    <a href="https://vipnunes.com/cec/revisão-de-historia.pdf" class="link">(Simulado 1) Revisão de História</a>
     
 </div>
 
