--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             background-image: url('https://vipnunes.com/earth.png');
             background-size: cover;
             background-position: center;
+            background-attachment: fixed;
         }
 
         .container {
