--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             max-width: 600px;
             text-align: center;
             margin-top: 250px;
+            background-color: rgba(0, 0, 0, 0.5); /* Fundo transparente (RGB com 50% de opacidade) */
         }
 
         .profile-image {
