--- a/index.html
+++ b/index.html
@@ -32,7 +32,6 @@
             max-width: 600px;
             text-align: center;
             margin-top: 250px;
-            background-color: rgba(0, 0, 0, 0.5); /* Fundo transparente (RGB com 50% de opacidade) */
         }
 
         .profile-image {
@@ -66,6 +65,9 @@
             color: #ffffff;
             text-decoration: underline;
             margin: 0 10px;
+        }
+        .button:hover {
+            background-color: rgba(255, 255, 255, 0.5); /* Fundo do botão transparente ao passar o mouse (RGB com 50% de opacidade) */
         }
     </style>
 </head>
