--- a/index.html
+++ b/index.html
@@ -66,6 +66,16 @@
             text-decoration: underline;
             margin: 0 10px;
         }
+        .button {
+            background-color: rgba(255, 255, 255, 0.3); /* Fundo do botão transparente (RGB com 30% de opacidade) */
+            color: #ffffff;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 5px;
+            margin: 0 5px;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
         .button:hover {
             background-color: rgba(255, 255, 255, 0.5); /* Fundo do botão transparente ao passar o mouse (RGB com 50% de opacidade) */
         }
