--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ window.cookieconsent.initialise({
 </script>
 
 <div class="container">
-    <img src="a.jpg" alt="Vipnunes" class="profile-image">
+    <img src="11zon_cropped(1).png" alt="Vipnunes" class="profile-image">
     <h1>Vipnunes</h1>
     <p>Hello, I'm Vipnunes! I am an ordinary person on the internet.</p>
     
