--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ window.cookieconsent.initialise({
 
 <div class="container">
     <img src="11zon_cropped(1).png" alt="Vipnunes" class="profile-image">
-    <h1>Vipnunes</h1>
+    <h1>Vipnunes<img src="verify.svg" alt="Foto" class="profile-image"></h1>
     <p>Hello, I'm Vipnunes! I am an ordinary person on the internet.</p>
     
     <a href="mailto:contato@vipnunes.com" class="link" target="_blank">E-mail</a>
