--- a/index.html
+++ b/index.html
@@ -66,6 +66,12 @@
             text-decoration: underline;
             margin: 0 10px;
         }
+        h1, p {
+            border: 2px solid #000000;
+            padding: 10px;
+            margin: 10px 0;
+            display: inline-block; /* Para ajustar o tamanho da imagem */
+        }
     </style>
 </head>
 <body>
