--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
             border-radius: 8px;
             text-decoration: none;
             color: #ffffff;
+            opacity: [0.5] ;
             font-weight: bold;
         }
 
