--- a/index.html
+++ b/index.html
@@ -71,6 +71,10 @@
 </head>
 <body>
 
+<dir style='display: none;'>
+<a rel="me" href="https://mastodon.social/@vipnunes">Mastodon</a>
+</dir>
+
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5951847339464924"
      crossorigin="anonymous"></script>
 <!-- Ads -->
