--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ window.cookieconsent.initialise({
     <p><b>Social Networks</b></p>
     <a href="https://discord.com/invite/JC3xbdzarY" class="link" target="_blank">Discord</a>
     <a href="https://www.youtube.com/vipnunes" class="link" target="_blank">Youtube</a>
-    <a rel="me" href="https://mastodon.social/@vipnunes">Mastodon</a>
+    <a rel="me" href="https://mastodon.social/@vipnunes" class="link" target="_blank">Mastodon</a>
     <p><b>Games</b></p>
     <a href="https://www.roblox.com/users/1601069127/profile" class="link" target="_blank">Roblox</a>
     <p><b>My Gihub and My Projects</b></p>
