--- a/index.html
+++ b/index.html
@@ -120,10 +120,9 @@ window.cookieconsent.initialise({
     <a rel="me" href="https://mastodon.social/@vipnunes" class="link" target="_blank">Mastodon</a>
     <p><b>Games</b></p>
     <a href="https://www.roblox.com/users/1601069127/profile" class="link" target="_blank">Roblox</a>
-    <p><b>My Gihub and My Projects</b></p>
+    <p><b>My Gihub and My Projects (other page)</b></p>
     <a href="https://github.com/vipnunes" class="link" target="_blank">GitHub</a>
-    <a href="https://search.vipnunes.com" class="link" target="_blank">Vipnunes Search</a>
-    <a href="https://i.vipnunes.com" class="link" target="_blank">i.vipnunes.com (Link Shortener)</a>
+    <a href="https://vipnunes.com/projects" class="link" target="_blank">All my Projects</a>
     <p><b>Since 24 of July, of 2023</b></p>
     
 </div>
