--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ window.cookieconsent.initialise({
     <a href="https://www.roblox.com/users/1601069127/profile" class="link" target="_blank">Roblox</a>
     <p><b>My Gihub and My Projects (other page)</b></p>
     <a href="https://github.com/vipnunes" class="link" target="_blank">GitHub</a>
-    <a href="https://vipnunes.com/projects" class="link" target="_blank">All my Projects</a>
+    <a href="https://vipnunes.com/projects" class="link">All my Projects</a>
     <p><b>Since 24 of July, of 2023</b></p>
     
 </div>
