--- a/404.html
+++ b/404.html
@@ -22,6 +22,10 @@
             justify-content: center;
             flex-direction: column;
             height: 100vh;
+            background-image: url('https://vipnunes.com/earth.png');
+            background-size: cover;
+            background-position: center;
+            background-attachment: fixed;
         }
 
         .container {
