Update and rename cec.html to files.html

--- a/files.html
+++ b/files.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vipnunes</title>
-    <link rel="icon" href="11zon_cropped(1).png" type="image/png">
+    <link rel="icon" href="files/11zon_cropped(1).png" type="image/png">
     
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5951847339464924"
      crossorigin="anonymous"></script>
@@ -68,8 +68,8 @@
 </script>
 
 <div class="container">
-    <img src="11zon_cropped(1).png" alt="Vipnunes" class="profile-image">
-    <h1>CEC</h1>
+    <img src="files/11zon_cropped(1).png" alt="Vipnunes" class="profile-image">
+    <h1>Files</h1>
     <p>Arqivos.</p>
     
     <a href="https://vipnunes.com/cec/revisão-de-historia.pdf" class="link">(Simulado 1) Revisão de História</a>
