--- a/404.html
+++ b/404.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vipnunes</title>
-    <link rel="icon" href="11zon_cropped(1).png" type="image/png">
+    <link rel="icon" href="files/11zon_cropped(1).png" type="image/png">
     
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5951847339464924"
      crossorigin="anonymous"></script>
@@ -22,7 +22,7 @@
             justify-content: center;
             flex-direction: column;
             height: 100vh;
-            background-image: url('https://vipnunes.com/earth.png');
+            background-image: url('https://vipnunes.com/files/earth.png');
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
@@ -72,7 +72,7 @@
 </script>
 
 <div class="container">
-    <img src="11zon_cropped(1).png" alt="Vipnunes" class="profile-image">
+    <img src="files/11zon_cropped(1).png" alt="Vipnunes" class="profile-image">
     <h1>404<img src="verify.svg" alt="" class="profile-image"></h1>
     <p>The page you are looking for does not exist.</p>
     
