--- a/404.html
+++ b/404.html
@@ -73,7 +73,7 @@
 
 <div class="container">
     <img src="files/11zon_cropped(1).png" alt="Vipnunes" class="profile-image">
-    <h1>404<img src="verify.svg" alt="" class="profile-image"></h1>
+    <h1>404<img src="files/verify.svg" alt="" class="profile-image"></h1>
     <p>The page you are looking for does not exist.</p>
     
     <a href="https://vipnunes.com" class="link">Go to homepage</a>
