--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             justify-content: center;
             flex-direction: column;
             height: 100vh;
-            background-image: href="files/11zon_cropped(1).png";
+            background-image: href="files/earth.png.png";
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
