--- a/projects.html
+++ b/projects.html
@@ -110,7 +110,7 @@ window.cookieconsent.initialise({
 
 <div class="container">
     <img src="files/11zon_cropped(1).png" alt="Vipnunes" class="profile-image">
-    <h1>Vipnunes<img src="verify.svg" alt="" class="profile-image"></h1>
+    <h1>Vipnunes<img src="files/verify.svg" alt="" class="profile-image"></h1>
     <p>I placed all my websites and projects in this page, i'm crazy.</p>
 
     <a href="https://vipnunes.com" class="link">Back to vipnunes.com</a>
