--- a/index.html
+++ b/index.html
@@ -42,10 +42,11 @@
         }
 
         .link {
+            background-color: rgba(255, 255, 255, 0.5);
+            color: #ffffff;
             display: block;
             padding: 15px;
             margin: 10px;
-            background-color: #333333;
             border-radius: 8px;
             text-decoration: none;
             color: #ffffff;
