--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         }
 
         .link:hover {
-            background-color: #555555;
+            background-color: rgba(0, 0, 0, 0.7);
         }
 
         .footer {
