--- a/projects.html
+++ b/projects.html
@@ -42,10 +42,10 @@
         }
 
         .link {
+            background-color: rgba(0, 0, 0, 0.5);
             display: block;
             padding: 15px;
             margin: 10px;
-            background-color: #333333;
             border-radius: 8px;
             text-decoration: none;
             color: #ffffff;
@@ -53,7 +53,7 @@
         }
 
         .link:hover {
-            background-color: #555555;
+            background-color: rgba(0, 0, 0, 0.7);
         }
 
         .footer {
