--- a/projects.html
+++ b/projects.html
@@ -22,7 +22,7 @@
             justify-content: center;
             flex-direction: column;
             height: 100vh;
-            background-image: url('https://vipnunes.com/earth.png');
+            background-image: url('https://vipnunes.com/files/gra.jpg');
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
