--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ window.cookieconsent.initialise({
     <h1>Vipnunes<img src="files/verify.svg" alt="" class="profile-image"></h1>
     <p>Hello, I'm Vipnunes! I am an ordinary person on the internet.</p>
     
-    <a href="mailto:contato@vipnunes.com" class="link" target="_blank" <img src="files/mail.png" alt="Foto">E-mail</a>
+    <a href="mailto:contato@vipnunes.com" class="link" target="_blank">E-mail</a>
     <p><b>Social Networks</b></p>
     <a href="https://discord.com/invite/JC3xbdzarY" class="link" target="_blank">Discord</a>
     <a href="https://www.youtube.com/vipnunes" class="link" target="_blank">Youtube</a>
