--- a/projects.html
+++ b/projects.html
@@ -119,7 +119,7 @@ window.cookieconsent.initialise({
     <p><b>My Projects</b></p>
     <a href="https://search.vipnunes.com" class="link" target="_blank">Vipnunes Search</a>
     <a href="https://i.vipnunes.com" class="link" target="_blank">i.vipnunes.com (Link Shortener)</a>
-    <a href="https://planet-clicker.vipnunes.com" class="link" target="_blank">Planet Clicker</a>
+    <a href="https://planet-click.vipnunes.com" class="link" target="_blank">Planet Clicker</a>
     <a href="https://cookies.vipnunes.com" class="link" target="_blank">What are Cookies?</a>
     <a href="https://alex.vipnunes.com" class="link" target="_blank">My Bird's Website (Portuguese)</a>
     <p><b>Since 24 of July, of 2023</b></p>
