--- a/404.html
+++ b/404.html
@@ -22,7 +22,7 @@
             justify-content: center;
             flex-direction: column;
             height: 100vh;
-            background-image: url('https://vipnunes.com/earth.png');
+            background-image: url('https://vipnunes.com/files/gra.jpg');
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
@@ -41,10 +41,10 @@
         }
 
         .link {
+            background-color: rgba(0, 0, 0, 0.5);
             display: block;
             padding: 15px;
             margin: 10px;
-            background-color: #333333;
             border-radius: 8px;
             text-decoration: none;
             color: #ffffff;
@@ -52,7 +52,7 @@
         }
 
         .link:hover {
-            background-color: #555555;
+            background-color: rgba(0, 0, 0, 0.7);
         }
     </style>
 </head>
