--- a/search.html
+++ b/search.html
@@ -14,6 +14,7 @@
             font-family: Arial, sans-serif;
             text-align: center;
             margin: 50px;
+            background-image: url('https://vipnunes.com/files/gra.jpg');
             background-color: #333;
         }
 
