--- a/search.html
+++ b/search.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Search</title>
+    <title>Vipnunes - Search</title>
     <link rel="shortcut icon" type="image/png" href="files/11zon_cropped(1).png">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5951847339464924"
      crossorigin="anonymous"></script>
