--- a/search.html
+++ b/search.html
@@ -14,8 +14,18 @@
             font-family: Arial, sans-serif;
             text-align: center;
             margin: 50px;
-            background-image: url('https://vipnunes.com/files/gra.jpg');
             background-color: #333;
+
+            padding: 0;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            flex-direction: column;
+            height: 100vh;
+            background-image: url('https://vipnunes.com/files/gra.jpg');
+            background-size: cover;
+            background-position: center;
+            background-attachment: fixed;
         }
 
         input {
