--- a/projects.html
+++ b/projects.html
@@ -117,7 +117,7 @@ window.cookieconsent.initialise({
     <a href="mailto:contato@vipnunes.com" class="link" target="_blank">E-mail</a>
     <a href="https://github.com/vipnunes" class="link" target="_blank">GitHub</a>
     <p><b>My Projects</b></p>
-    <a href="https://search.vipnunes.com" class="link" target="_blank">Vipnunes Search</a>
+    <a href="https://vipnunes.com/search" class="link" target="_blank">Vipnunes Search</a>
     <a href="https://i.vipnunes.com" class="link" target="_blank">i.vipnunes.com (Link Shortener)</a>
     <a href="https://planet-click.vipnunes.com" class="link" target="_blank">Planet Clicker</a>
     <a href="https://cookies.vipnunes.com" class="link" target="_blank">What are Cookies?</a>
