--- a/404.html
+++ b/404.html
@@ -77,6 +77,7 @@
     <p>The page you are looking for does not exist.</p>
     
     <a href="https://vipnunes.com" class="link">Go to homepage</a>
+    <a href="https://planet-click.vipnunes.com" class="link">Play the Planet Click game</a>
     
 </div>
 
