--- a/index.html
+++ b/index.html
@@ -127,5 +127,7 @@ window.cookieconsent.initialise({
     
 </div>
 
+<footer> <p><b>Since 24 of July, of 2023</b></p> </footer>
+
 </body>
 </html>
