--- a/index.html
+++ b/index.html
@@ -41,6 +41,12 @@
             margin-bottom: 20px;
         }
 
+        .username {
+            color: #cccccc;
+            font-size: 18px;
+            margin: 5px 0;
+        }
+
         .link {
             background-color: rgba(0, 0, 0, 0.5);
             color: #ffffff;
@@ -112,6 +118,7 @@ window.cookieconsent.initialise({
 <div class="container">
     <img src="files/11zon_cropped(1).png" alt="Vipnunes" class="profile-image">
     <h1>Vipnunes<img src="files/verify.svg" alt="" class="profile-image"></h1>
+    <p class="username">@vipnunes</p>
     <p>Hello, I'm Vipnunes! I am an ordinary person on the internet.</p>
     
     <a href="mailto:contato@vipnunes.com" class="link" target="_blank">E-mail</a>
