--- a/projects.html
+++ b/projects.html
@@ -41,6 +41,12 @@
             margin-bottom: 20px;
         }
 
+        .username {
+            color: #cccccc;
+            font-size: 18px;
+            margin: 5px 0;
+        }
+
         .link {
             background-color: rgba(0, 0, 0, 0.5);
             display: block;
@@ -111,6 +117,7 @@ window.cookieconsent.initialise({
 <div class="container">
     <img src="files/11zon_cropped(1).png" alt="Vipnunes" class="profile-image">
     <h1>Vipnunes<img src="files/verify.svg" alt="" class="profile-image"></h1>
+    <p class="username">@vipnunes</p>
     <p>I placed all my websites and projects in this page, i'm crazy.</p>
 
     <a href="https://vipnunes.com" class="link">Back to vipnunes.com</a>
