--- a/404.html
+++ b/404.html
@@ -40,6 +40,12 @@
             margin-bottom: 20px;
         }
 
+        .username {
+            color: #cccccc;
+            font-size: 18px;
+            margin: 5px 0;
+        }
+
         .link {
             background-color: rgba(0, 0, 0, 0.5);
             display: block;
@@ -73,7 +79,8 @@
 
 <div class="container">
     <img src="files/11zon_cropped(1).png" alt="Vipnunes" class="profile-image">
-    <h1>404<img src="files/verify.svg" alt="" class="profile-image"></h1>
+    <h1>404 - Not Found<img src="files/verify.svg" alt="" class="profile-image"></h1>
+    <p class="username">@404</p>
     <p>The page you are looking for does not exist.</p>
     
     <a href="https://vipnunes.com" class="link">Go to homepage</a>
