--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vipnunes</title>
+    <title>Vipnunes - 404</title>
     <link rel="icon" href="files/11zon_cropped(1).png" type="image/png">
     
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5951847339464924"
