--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ window.cookieconsent.initialise({
     <p class="username">@vipnunes</p>
     <p>Hello, I'm Vipnunes! I am an ordinary person on the internet.</p>
     
-    <a href="mailto:contato@vipnunes.com" class="link" target="_blank">E-mail</a>
+    <a href="mailto:hi@vipnunes.com" class="link" target="_blank">E-mail</a>
     <p><b>Social Networks</b></p>
     <a href="https://www.youtube.com/vipnunes" class="link" target="_blank">Youtube</a>
     <a rel="me" href="https://mastodon.social/@vipnunes" class="link" target="_blank">Mastodon</a>
