--- a/projects.html
+++ b/projects.html
@@ -121,7 +121,7 @@ window.cookieconsent.initialise({
     <p>I placed all my websites and projects in this page, i'm crazy.</p>
 
     <a href="https://vipnunes.com" class="link">Back to vipnunes.com</a>
-    <a href="mailto:contato@vipnunes.com" class="link" target="_blank">E-mail</a>
+    <a href="mailto:hi@vipnunes.com" class="link" target="_blank">E-mail</a>
     <a href="https://github.com/vipnunes" class="link" target="_blank">GitHub</a>
     <p><b>My Projects</b></p>
     <a href="https://vipnunes.com/search" class="link" target="_blank">Vipnunes Search</a>
